changed style and stage to help fix word wrap

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -222,9 +222,8 @@ margin-bottom: 0px;
 
 .vertical-center {
    
-  width: 50%;
+  width: 80%;
     margin: 0 auto;
-width:50%;
   display: flex;
   align-items: center;
     
